src/test/deca/syntax/invalid/notYetImplemented/test_parser_wrong_use_new.deca
// Description:
//    Minimalistic program to test the a wrong use of new.
//
// Results:
//    None
//
// History:
//    Created on 13/1/2025

class Car{
    int x = new int(42);
}